# rezzy-samples

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.cursor/rules/: code-standards.mdc
.github/: CODEOWNERS
samples/bulk-generate/python/: README.md  jobs.json.sample  pyproject.toml
samples/bulk-generate/python/src/: client.py  index.py  logger.py  types.py  util.py
samples/bulk-generate/typescript/: README.md  jobs.json.sample  package-lock.json  package.json  tsconfig.json
samples/bulk-generate/typescript/src/: client.ts  index.ts  logger.ts  types.ts  util.ts
