[project]
name = "rezzy-bulk-generate"
version = "1.0.0"
description = "Generate resumes and/or cover letters in bulk from a jobs.json file using the Rezzy API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
generate = "src.index:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
